[project]
name = "homeassistant-grandstream-gwn"
version = "0.0.1"
description = "Integration for the Grandstream GWN Manager for Home Assistant"
readme = "README.md"
requires-python = ">=3.14.2"

dependencies = [
    "aiomqtt>=2.5.1",
    "aiohttp>=3.13.2",
    "PyYAML"
]

license-files = ["LICENSE-MPL.md", "LICENSE-BSD3.md"]

[project.scripts]
gwn_mqtt = "mqtt.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    "types-PyYAML"
]

[project.optional-dependencies]
ha = ["homeassistant>=2026.4.4"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["gwn*", "mqtt*"]
exclude = ["custom_components*", "local_docs*"]
